--- a/Build-Ishita/Temp-1/temp-1.html
+++ b/Build-Ishita/Temp-1/temp-1.html
@@ -486,7 +486,7 @@ td,
             <table width="720" height="100%" style="width:720px;height: 100%; border-collapse: collapse;" class="width-full height-auto" border="0" cellpadding="0" cellspacing="0">
                 <tr>
                     <td align="center" style="text-align:center;">
-                                    <a href="https://email.latitudefinancial.com.au/pub/cc?_ri_=X0Gzc2X%3DAQpglLjHJlTQGgzcC6J2NfXGzae73yOoS6qOrgswXezbujhKA8EqUrqzcK5yqFXzciXgY97BGmlOVXtpKX%3DTSWSTWRCT&_ei_=EsPkUm1BpoRB-moH4TDQpbpzY9R3r_a0iyLohw8Qyb6Y17sF0lKwt6AMXhoyIWdADb6u3vyy4JzD-gyXu7z7MNHPT1BcjcSCkaRBBmM9P5wfnv7OguFp91CqkR902gHal3nouTD-zOR8FTgXnQk1ZqwtLd1tRdxZM_uH2M2aun07NqxQMeGt8sFyvDQL5ct5Vo0ZZ9Tu0JQyA6LEEy2ZhHKl1eKArNq-5kjgCJsf0ryAUS9ET_DPSIx8OwMqacI0FRVjHgmdZLBdphdj569LDQaxhQEv-JuqKHeTTmYvxRoDdIVWqiJEDGY7OHk20R5Tdrp7WbCbsFDu6sffXoZBPnJbYNoVkXbZC26BgSgBgJenB8cPAZ_dq8y7KDUKKbj7CJEJCE8EyO5SjafCbKUXiwF9Jdt6VWu1VVbNz8Z6w51DjyeLLAc0Oeovt1duYE_5GPlzOvkHnjmBLHGeEYHO0U45cKHG3jfzWlHmSLbSWt2tlJpl3WRAQmJIAj5d0krEn4VCLLezoQmO2axWtG83cuahWXmaXHp8ZnaF9Q440XB5.&_di_=fioa3mg8mndr1t5h76cgiur3tq98e2lj50bfjg2o2ig7foa8r160" target="_blank">
+                                    <a href="" target="_blank">
                               <img class="hidden" border="0" width="720" src="images/01_ General_Info_B2C_DT_awardsx2.jpg" style="vertical-align: top; border: none; width: 100%;" alt="">
                             <!--[if !mso]><!-->
                             <img class="display-block width-full desk" border="0" src="images/01_ General_Info_B2C_DT_awardsx2.jpg" style="vertical-align: top; border: none; width: 100%; display:none;" alt="">
