--- a/Build-Ishita/Temp-3/3A/template3A.html
+++ b/Build-Ishita/Temp-3/3A/template3A.html
@@ -671,7 +671,7 @@ td,
                                             <td style="padding:0 25px;" class="pad-none">
                                                 <table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="width: 100%; border-collapse: collapse;">
                                                     <tr>
-                                                        <td style="padding:20px 0;" class="padding-20">
+                                                        <td style="padding:20px 0;" class="padding-20" align="center">
                                                             <img src="images/Star.png" alt="Image Two" class="hidden" width="100" height="100" border="0" style="border:0; width:100px;height:auto; display:block;margin: auto;" />
 
                                                             <!--[if !mso]><!-->
@@ -945,7 +945,7 @@ td,
                                 <td width="50%" align="center" valign="top" style="width:50%;vertical-align:top;">
                                     <table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="width: 100%; border-collapse: collapse;">
                                         <tr>
-                                            <td style="padding:0px 25px 0px 0;" class="pad-l-20 pad-r-10">
+                                            <td style="padding:0px 25px 0px 0;" class="pad-l-20 pad-r-10" align="center">
                                                 <img src="images/Star.png" alt="Image One" class="hidden" width="100%" height="100%" border="0" style="border:0; width:100%;height:auto; display:block;" />
 
                                                 <!--[if !mso]><!-->
